--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "postmelon mern stack",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "server": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
+    "express": "^4.17.1",
     "express-validator": "^6.6.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
