Resolved token issue

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DB_HOST=mongodb://localhost/asmo-backend
-DB_HOST_TEST=mongodb://localhost/asmo-backend_test
+ATLAS_URI=mongodb+srv://<username>:<password>@postmelonprod.h2pnr.mongodb.net/<dbname>?retryWrites=true&w=majority
+TOKEN=<token>
